--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -126,7 +126,7 @@ li:hover .navSub li {
 #slider {
   padding-top: 66.66666%;
   margin-top: 46px;
-  background-image: url(/Project_1/assets/img/audience-1853662_960_720.webp);
+  background-image: url(../img/audience-1853662_960_720.webp);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
