--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,7 +270,7 @@ li:hover .navSub li {
 /* MAP */
 #map {
   padding-top: 66.66666%;
-  background-image: url(/Project_1/assets/img/web-3120321_960_720.png);
+  background-image: url(../img/web-3120321_960_720.png);
   background-size: 100%;
   background-position: center;
   background-repeat: no-repeat;
